--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,15 @@ before_install:
 script:
   - docker run webisteme/docker-react npm run test -- --coverage
 
-  
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker"
+  env: "Docker-env"
+  bucket_name: "elasticbeanstalk-us-west-2-000917149031"
+  bucket_path: "docker"
+  on:
+    branch: master
+  acces_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
